# RoboAuto-geometry

./: .gitignore  CMakeLists.txt  main.cpp
Lib/: Circle.h  Drawable.h  GeometricEntity.cpp  GeometricEntity.h  Line.cpp  Line.h  Point.cpp  Point.h  Polygon.h  Vector.cpp  Vector.h
src/: CMakeLists.txt  Circle.h  Drawable.h  Drawer.h  Geometry.h  GeometryMath.h  Line.h  Polygon.h  Vector.h  main.cpp
tests/: CMakeLists.txt  CircleTest.h  LineTest.h  PolygonTest.h  VectorTest.h  gmain.cpp  testMain.cpp
